Error injection thread now waits correctly.

If std::chrono::duration::rep is float, then the wait_for function
does not behave correctly.
See https://gcc.gnu.org/bugzilla/show_bug.cgi?id=68519